Update authentication file. Remove direct file access for security.