@@ -1,9 +1,9 @@
 package net.hycrafthd.minecraft_authenticator.util;
 
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.Map.Entry;
 import java.util.Optional;
 
@@ -11,7 +11,9 @@ import com.google.gson.JsonElement;
 import com.google.gson.JsonParseException;
 
 import net.hycrafthd.minecraft_authenticator.Constants;
-import net.hycrafthd.minecraft_authenticator.login.AuthenticationFile;
+import net.hycrafthd.minecraft_authenticator.login.file.AuthenticationFile;
+import net.hycrafthd.minecraft_authenticator.login.file.MicrosoftAuthenticationFile;
+import net.hycrafthd.minecraft_authenticator.login.file.YggdrasilAuthenticationFile;
 import net.hycrafthd.minecraft_authenticator.microsoft.MicrosoftAuthenticationException;
 import net.hycrafthd.minecraft_authenticator.microsoft.api.OAuthErrorResponse;
 import net.hycrafthd.minecraft_authenticator.microsoft.api.OAuthTokenResponse;
@@ -26,25 +28,25 @@ import net.hycrafthd.minecraft_authenticator.yggdrasil.service.YggdrasilService;
 
 public class AuthenticationUtil {
 	
-	public static void writeAuthenticationFile(AuthenticationFile authFile, Path path) throws IOException {
+	public static void writeAuthenticationFile(AuthenticationFile authFile, OutputStream outputStream) throws IOException {
 		final JsonElement element = Constants.GSON.toJsonTree(authFile);
 		if (element.isJsonObject()) {
 			element.getAsJsonObject().addProperty("warning", Constants.FILE_WARNING);
 		}
 		final String json = Constants.GSON_PRETTY.toJson(element);
-		Files.write(path, json.getBytes(StandardCharsets.UTF_8));
+		outputStream.write(json.getBytes(StandardCharsets.UTF_8));
 	}
 	
-	public static AuthenticationFile readAuthenticationFile(Path path) throws IOException {
+	public static AuthenticationFile readAuthenticationFile(InputStream inputStream) throws IOException {
 		try {
-			final String json = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+			final String json = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
 			return Constants.GSON.fromJson(json, AuthenticationFile.class);
 		} catch (JsonParseException ex) {
 			throw new IOException("Cannot parse authentication file", ex);
 		}
 	}
 	
-	public static AuthenticationFile.Microsoft createMicrosoftAuthenticationFile(Optional<Entry<String, String>> customAzureApplication, String authorizationCode) throws MicrosoftAuthenticationException {
+	public static MicrosoftAuthenticationFile createMicrosoftAuthenticationFile(Optional<Entry<String, String>> customAzureApplication, String authorizationCode) throws MicrosoftAuthenticationException {
 		final MicrosoftResponse<OAuthTokenResponse, OAuthErrorResponse> microsoftResponse;
 		if (customAzureApplication.isPresent()) {
 			final Entry<String, String> entry = customAzureApplication.get();
@@ -61,10 +63,10 @@ public class AuthenticationUtil {
 			throw new MicrosoftAuthenticationException("Cannot get oAuth token because: " + microsoftResponse.getErrorResponse().get());
 		}
 		final OAuthTokenResponse response = microsoftResponse.getResponse().get();
-		return new AuthenticationFile.Microsoft(response.getRefreshToken());
+		return new MicrosoftAuthenticationFile(response.getRefreshToken());
 	}
 	
-	public static AuthenticationFile.Yggdrasil createYggdrasilAuthenticationFile(String clientToken, String username, String password) throws YggdrasilAuthenticationException {
+	public static YggdrasilAuthenticationFile createYggdrasilAuthenticationFile(String clientToken, String username, String password) throws YggdrasilAuthenticationException {
 		final YggdrasilResponse<AuthenticateResponse> yggdrasilResponse = YggdrasilService.authenticate(new AuthenticatePayload(new Agent("Minecraft", 1), username, password, clientToken, true));
 		if (yggdrasilResponse.hasException()) {
 			throw new YggdrasilAuthenticationException("Cannot authenticate minecraft account", yggdrasilResponse.getException().get());
@@ -72,6 +74,6 @@ public class AuthenticationUtil {
 			throw new YggdrasilAuthenticationException("Cannot authenticate minecraft account because: " + yggdrasilResponse.getErrorResponse().get());
 		}
 		final AuthenticateResponse response = yggdrasilResponse.getResponse().get();
-		return new AuthenticationFile.Yggdrasil(response.getAccessToken(), response.getClientToken());
+		return new YggdrasilAuthenticationFile(response.getAccessToken(), response.getClientToken());
 	}
 }
